Add vertical divider

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -3,3 +3,5 @@
 @import "~bulmaswatch/lumen/_variables.scss";
 @import "~bulma/bulma.sass";
 @import "~bulmaswatch/lumen/_overrides.scss";
+
+@import "~@creativebulma/bulma-divider/src/sass/index.sass";
