--- a/styles/app.scss
+++ b/styles/app.scss
@@ -5,3 +5,7 @@
 @import "~bulmaswatch/lumen/_overrides.scss";
 
 @import "~@creativebulma/bulma-divider/src/sass/index.sass";
+
+.postlist-link:hover {
+  text-decoration: underline;
+}
